--- a/Introduction HTML/forgotpassword.html
+++ b/Introduction HTML/forgotpassword.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Information de connexion</title>
+    <title>Mot de passe oublié</title>
   </head>
   <body>
-    <h1>C'est pas encore crée lol</h1>
+    <label for="email"> Adresse Mail </label>
+    <input type="email" placeholder="E-mail" id="email" /><br />
+    <a href="signup.html"><button type="submit">Se connecter</button></a>
   </body>
 </html>
