--- a/Introduction HTML/register.html
+++ b/Introduction HTML/register.html
@@ -109,7 +109,7 @@
         <label for="yes">Non</label>
       </fieldset>
 
-      <button id="moovemysubmit" type="submit">Je m'inscris !</button>
+      <button class="button" type="submit">Je m'inscris !</button>
     </form>
 
     <div id="div__2D"></div>
