--- a/Introduction HTML/register.html
+++ b/Introduction HTML/register.html
@@ -11,8 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/566e8e5913.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="assets/pngegg.png">
+    <script
+      src="https://kit.fontawesome.com/566e8e5913.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" type="image/x-icon" href="assets/pngegg.png" />
     <title>Information de connexion</title>
   </head>
   <body marginwidth="50" marginheight="100" topmargin="100" leftmargin="50">
